--- a/ML-Lab-04-NeuralNetworkTraining.ipynb
+++ b/ML-Lab-04-NeuralNetworkTraining.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,36 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            song_name artist_name  acousticness  danceability  energy  \\\n",
-      "0        All Mixed Up         311      0.010400         0.760   0.702   \n",
-      "1   Don't Tread On Me         311      0.000045         0.574   0.919   \n",
-      "2  Beautiful Disaster         311      0.000387         0.576   0.738   \n",
-      "3           Backfired         408      0.076700         0.496   0.937   \n",
-      "4               Manic         408      0.001370         0.436   0.980   \n",
-      "\n",
-      "   instrumentalness  liveness  loudness  speechiness       tempo  valence  \\\n",
-      "0           0.00000     0.380    -9.404       0.0716   92.323998    0.659   \n",
-      "1           0.00280     0.116    -6.418       0.0737  176.531998    0.704   \n",
-      "2           0.00131     0.130    -8.122       0.0353  168.132004    0.675   \n",
-      "3           0.00000     0.123    -2.628       0.1320  178.020996    0.182   \n",
-      "4           0.00000     0.638    -3.491       0.2220  200.097000    0.674   \n",
-      "\n",
-      "    genre_name  Unnamed: 12  \n",
-      "0  alternative            0  \n",
-      "1  alternative            0  \n",
-      "2  alternative            0  \n",
-      "3         punk            8  \n",
-      "4         punk            8  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv('localify_music_genre - song_dataset_short_limited.csv')\n",
     "\n",
@@ -84,15 +57,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>song_name</th>\n",
+       "      <th>artist_name</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>genre_name</th>\n",
+       "      <th>Unnamed: 12</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>All Mixed Up</td>\n",
+       "      <td>311</td>\n",
+       "      <td>0.010400</td>\n",
+       "      <td>0.760</td>\n",
+       "      <td>0.702</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.380</td>\n",
+       "      <td>-9.404</td>\n",
+       "      <td>0.0716</td>\n",
+       "      <td>92.323998</td>\n",
+       "      <td>0.659</td>\n",
+       "      <td>alternative</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Don't Tread On Me</td>\n",
+       "      <td>311</td>\n",
+       "      <td>0.000045</td>\n",
+       "      <td>0.574</td>\n",
+       "      <td>0.919</td>\n",
+       "      <td>0.00280</td>\n",
+       "      <td>0.116</td>\n",
+       "      <td>-6.418</td>\n",
+       "      <td>0.0737</td>\n",
+       "      <td>176.531998</td>\n",
+       "      <td>0.704</td>\n",
+       "      <td>alternative</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Beautiful Disaster</td>\n",
+       "      <td>311</td>\n",
+       "      <td>0.000387</td>\n",
+       "      <td>0.576</td>\n",
+       "      <td>0.738</td>\n",
+       "      <td>0.00131</td>\n",
+       "      <td>0.130</td>\n",
+       "      <td>-8.122</td>\n",
+       "      <td>0.0353</td>\n",
+       "      <td>168.132004</td>\n",
+       "      <td>0.675</td>\n",
+       "      <td>alternative</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Backfired</td>\n",
+       "      <td>408</td>\n",
+       "      <td>0.076700</td>\n",
+       "      <td>0.496</td>\n",
+       "      <td>0.937</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.123</td>\n",
+       "      <td>-2.628</td>\n",
+       "      <td>0.1320</td>\n",
+       "      <td>178.020996</td>\n",
+       "      <td>0.182</td>\n",
+       "      <td>punk</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Manic</td>\n",
+       "      <td>408</td>\n",
+       "      <td>0.001370</td>\n",
+       "      <td>0.436</td>\n",
+       "      <td>0.980</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.638</td>\n",
+       "      <td>-3.491</td>\n",
+       "      <td>0.2220</td>\n",
+       "      <td>200.097000</td>\n",
+       "      <td>0.674</td>\n",
+       "      <td>punk</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            song_name artist_name  acousticness  danceability  energy  \\\n",
+       "0        All Mixed Up         311      0.010400         0.760   0.702   \n",
+       "1   Don't Tread On Me         311      0.000045         0.574   0.919   \n",
+       "2  Beautiful Disaster         311      0.000387         0.576   0.738   \n",
+       "3           Backfired         408      0.076700         0.496   0.937   \n",
+       "4               Manic         408      0.001370         0.436   0.980   \n",
+       "\n",
+       "   instrumentalness  liveness  loudness  speechiness       tempo  valence  \\\n",
+       "0           0.00000     0.380    -9.404       0.0716   92.323998    0.659   \n",
+       "1           0.00280     0.116    -6.418       0.0737  176.531998    0.704   \n",
+       "2           0.00131     0.130    -8.122       0.0353  168.132004    0.675   \n",
+       "3           0.00000     0.123    -2.628       0.1320  178.020996    0.182   \n",
+       "4           0.00000     0.638    -3.491       0.2220  200.097000    0.674   \n",
+       "\n",
+       "    genre_name  Unnamed: 12  \n",
+       "0  alternative            0  \n",
+       "1  alternative            0  \n",
+       "2  alternative            0  \n",
+       "3         punk            8  \n",
+       "4         punk            8  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8000\n",
+      "2000\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import random\n",
+    "#create df for training\n",
+    "trainData = df.copy()\n",
+    "\n",
+    "#calculate length of validation df\n",
+    "lenValidation = len(df)*0.2\n",
+    "\n",
+    "#create empty df for validation\n",
+    "validationData = df.iloc[0:0]\n",
+    "\n",
+    "#run until validationData is 20% of original df\n",
+    "while len(validationData) != int(lenValidation):\n",
+    "    #find random index from df\n",
+    "    randomIndex = random.randint(0,len(trainData)-1)\n",
+    "    #get row at index\n",
+    "    row = trainData.iloc[randomIndex]\n",
+    "    #extract artist name\n",
+    "    artist_name = row['artist_name']\n",
+    "    #extract all indices with that artist name\n",
+    "    artist_rows = trainData[trainData['artist_name'] == artist_name]\n",
+    "    #if there is enough space in validationData for them all add to validation\n",
+    "    if(lenValidation-len(validationData) >= len(artist_rows)):\n",
+    "        #add rows to validation df\n",
+    "        validationData = pd.concat([validationData, artist_rows], ignore_index=True)\n",
+    "        #remove validation rows from traindata\n",
+    "        trainData = trainData[trainData['artist_name'] != artist_name]\n",
+    "\n",
+    "print(len(trainData))\n",
+    "print(len(validationData))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -106,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
